Wallet: Fix align items (#1112)
* Wallet: Fix align items

* Change sass structure

--- a/universal-login-react/src/ui/styles/assetsItem.sass
+++ b/universal-login-react/src/ui/styles/assetsItem.sass
@@ -10,6 +10,13 @@
   .assets-item-left
     display: flex
 
+    .assets-price
+      text-align: left
+
+  .assets-item-right
+    .assets-price
+      text-align: right
+
   .assets-img-wrapper
     display: flex
     align-items: center
